Clicking Scrolled Object Properties Tab Brings Up Wrong One #36330

Closed
opened 2013-07-31 07:32:29 +02:00 by Lawrence D'Oliveiro · 3 comments

%%%This one will be a bit tricky to reproduce: it depends on scrolling the Properties icons with the mouse wheel, without moving the mouse.

Open a fresh Blender document with the default layout. Shrink the Properties window so that the context-selection icon bar needs to scroll. Bring up, say, the Render context. Leaving the mouse in position over the Render icon, use the mouse wheel to scroll the icon bar so that the Physics icon (at the opposite end of the icon bar) is now under the mouse. MAKE SURE THE MOUSE DOES NOT MOVE. Click on the Physics icon, and you will see it highlight, but the context shown is unchanged.

The next click will bring up the Physics context. This happens even if you use the wheel again, to bring another entirely different icon under the mouse before clicking! (Again, the mouse must not move while doing this.) You can keep scrolling and clicking, and the context shown will always be one scroll action behind.

Any movement of the mouse will clear up the confusion.

- Operating System, Graphics card ---

Debian Unstable AMD64, Intel graphics, quad-core i7.

- Blender version with error ---

Blender 2.68.1 build from SVN as from Sunday July 28.

%%%

%%%This one will be a bit tricky to reproduce: it depends on scrolling the Properties icons with the mouse wheel, without moving the mouse. Open a fresh Blender document with the default layout. Shrink the Properties window so that the context-selection icon bar needs to scroll. Bring up, say, the Render context. Leaving the mouse in position over the Render icon, use the mouse wheel to scroll the icon bar so that the Physics icon (at the opposite end of the icon bar) is now under the mouse. MAKE SURE THE MOUSE DOES NOT MOVE. Click on the Physics icon, and you will see it highlight, but the context shown is unchanged. The next click will bring up the Physics context. This happens even if you use the wheel again, to bring another entirely different icon under the mouse before clicking! (Again, the mouse must not move while doing this.) You can keep scrolling and clicking, and the context shown will always be one scroll action behind. Any movement of the mouse will clear up the confusion. - Operating System, Graphics card --- Debian Unstable AMD64, Intel graphics, quad-core i7. - Blender version with error --- Blender 2.68.1 build from SVN as from Sunday July 28. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r59454, thanks for the report! :)%%%

%%%Fixed in r59454, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36330
No description provided.