Fix [#36330] Clicking Scrolled Object Properties Tab Brings Up Wrong One

Actually, happened in any view2D... Just added a call to WM_event_add_mousemove() in view_pan_apply, so that overed/active button is refreshed in this case.